@@ -16,6 +16,7 @@ tractags-0.7 (not yet released)
  * #3206: Edit wiki page content and tag
  * #3359: Tickets tags don't work when using MySQL 4.x
  * #3753: Carry over tags from PageTemplates/ (was: TagIt macro)
+ * #4078: Bring back the mincount functionality for the TagCloud macro
  * #4164: Wiki pages without tags have no tag styles
  * #4223: Bad CSS interpretation with IE
  * #4277: Support for MySQL
